# myshell

./: CMakeLists.txt  README.txt  apt-packages.txt  main_foo.cpp
.github/workflows/: ubuntu.yml
include/: environment.h  utils.h
include/mycat/io/: io.h
include/mycat/programOptions/: programOptionsParse.h
include/myshell/: Logger.h  builtInCommands.h  commandsRunning.h  environment.h  utilities.h  utils.h
src/: builtInCommands.cpp  environment.cpp  main.cpp  utils.cpp
src/mycat/: io.cpp  main.cpp  programOptionsParse.cpp
src/myshell/: Logger.cpp  builtInCommands.cpp  commandsRunning.cpp  environment.cpp  main.cpp  utilities.cpp  utils.cpp
